{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 602,
  "lineage": "8407af93-a2f3-7c07-5cc2-f610d800f33b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:security-group/sg-080506b30632e94a1",
            "description": "Allow traffic only from elastic load balancer",
            "egress": [],
            "id": "sg-080506b30632e94a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "asg_security_group",
            "name_prefix": "",
            "owner_id": "534277139277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:security-group/sg-06554f5ef02e0ca3a",
            "description": "Allow traffic only from auto scaling group",
            "egress": [],
            "id": "sg-06554f5ef02e0ca3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "534277139277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:security-group/sg-006dfcd194523e9db",
            "description": "Allow traffic from outside the web.",
            "egress": [],
            "id": "sg-006dfcd194523e9db",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "elb_security_group",
            "name_prefix": "",
            "owner_id": "534277139277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bac142b290a32441",
            "domain": "vpc",
            "id": "eipalloc-0e1255b7ff2ff9ab6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-058fc1f42c05e8f24",
            "private_dns": "ip-192-168-1-29.ec2.internal",
            "private_ip": "192.168.1.29",
            "public_dns": "ec2-18-214-55-252.compute-1.amazonaws.com",
            "public_ip": "18.214.55.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:internet-gateway/igw-047a91d32479cf467",
            "id": "igw-047a91d32479cf467",
            "owner_id": "534277139277",
            "tags": {
              "Name": "Internet gateway"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1255b7ff2ff9ab6",
            "id": "nat-0378e4d3dae2ae6af",
            "network_interface_id": "eni-058fc1f42c05e8f24",
            "private_ip": "192.168.1.29",
            "public_ip": "18.214.55.252",
            "subnet_id": "subnet-03de1b017aa34a0b9",
            "tags": {
              "Name": "Nat gateway"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01ed9ab3b9302c978",
            "owner_id": "534277139277",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0378e4d3dae2ae6af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06abd1b14e5e7389b",
            "owner_id": "534277139277",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047a91d32479cf467",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priavet_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abb40db484c6e359",
            "route_table_id": "rtb-01ed9ab3b9302c978",
            "subnet_id": "subnet-037cfe682fa72edf0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a309ef3a308294ab",
            "route_table_id": "rtb-01ed9ab3b9302c978",
            "subnet_id": "subnet-0847e3cd81c081c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0245a36c829d26be1",
            "route_table_id": "rtb-01ed9ab3b9302c978",
            "subnet_id": "subnet-0e26c9f44044e072d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0929afd9adce78024",
            "route_table_id": "rtb-01ed9ab3b9302c978",
            "subnet_id": "subnet-08811c64c6f4f6d34"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575397c6960d65ca",
            "route_table_id": "rtb-01ed9ab3b9302c978",
            "subnet_id": "subnet-04394e0f3a7c94a94"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb071d2f7fa5c552",
            "route_table_id": "rtb-01ed9ab3b9302c978",
            "subnet_id": "subnet-0ca99492403da66fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.private_rt",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02288ed9162f49747",
            "route_table_id": "rtb-06abd1b14e5e7389b",
            "subnet_id": "subnet-03de1b017aa34a0b9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e2672703bddbf2f",
            "route_table_id": "rtb-06abd1b14e5e7389b",
            "subnet_id": "subnet-08aa025651f60a210"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bbc97ccf65e83d3",
            "route_table_id": "rtb-06abd1b14e5e7389b",
            "subnet_id": "subnet-0b4e50e8c38eef80b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020dfa6ba6742f4c6",
            "route_table_id": "rtb-06abd1b14e5e7389b",
            "subnet_id": "subnet-02849d9fab0a35b29"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e09aad769b1d8f07",
            "route_table_id": "rtb-06abd1b14e5e7389b",
            "subnet_id": "subnet-0ee038f48f5087395"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b49c660b5ed6dba8",
            "route_table_id": "rtb-06abd1b14e5e7389b",
            "subnet_id": "subnet-018fbfd943505faed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.ig",
            "module.aws_vpc.aws_route_table.public_rt",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-037cfe682fa72edf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.50.0/24",
            "id": "subnet-037cfe682fa72edf0",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Private_subnet_us-east-1a"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-0847e3cd81c081c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.51.0/24",
            "id": "subnet-0847e3cd81c081c7f",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Private_subnet_us-east-1b"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-0e26c9f44044e072d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.52.0/24",
            "id": "subnet-0e26c9f44044e072d",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Private_subnet_us-east-1c"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-08811c64c6f4f6d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.53.0/24",
            "id": "subnet-08811c64c6f4f6d34",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Private_subnet_us-east-1d"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-04394e0f3a7c94a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.54.0/24",
            "id": "subnet-04394e0f3a7c94a94",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Private_subnet_us-east-1e"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-0ca99492403da66fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.55.0/24",
            "id": "subnet-0ca99492403da66fe",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Private_subnet_us-east-1f"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-03de1b017aa34a0b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-03de1b017aa34a0b9",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Public_subnet_us-east-1a"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-08aa025651f60a210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-08aa025651f60a210",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Public_subnet_us-east-1b"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-0b4e50e8c38eef80b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0b4e50e8c38eef80b",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Public_subnet_us-east-1c"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-02849d9fab0a35b29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-02849d9fab0a35b29",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Public_subnet_us-east-1d"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-0ee038f48f5087395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0ee038f48f5087395",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Public_subnet_us-east-1e"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:subnet/subnet-018fbfd943505faed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-018fbfd943505faed",
            "map_public_ip_on_launch": true,
            "owner_id": "534277139277",
            "tags": {
              "Name": "Public_subnet_us-east-1f"
            },
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:vpc/vpc-0a254f65fa13fded8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02559505562fcea93",
            "default_route_table_id": "rtb-02885772c11c0478b",
            "default_security_group_id": "sg-045916cdf51e4ca39",
            "dhcp_options_id": "dopt-4d4b3537",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a254f65fa13fded8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02885772c11c0478b",
            "owner_id": "534277139277",
            "tags": {
              "Name": "aws_micor_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_s3_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:534277139277:vpc-endpoint/vpce-024d2726ac31be7c7",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-024d2726ac31be7c7",
            "owner_id": "534277139277",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "PROD"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a254f65fa13fded8"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}